<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:id="@+id/fragment_add_word"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddWord"
        android:background="@drawable/words_card"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:hint="@string/hint_english"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/RU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:hint="@string/hint_russia"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/AddWord"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="55dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/words_card"
            android:text="@string/btn_add_word"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

