<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/t_l_view_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button1"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_human_activity"
                android:gravity="bottom" />

            <Button
                android:id="@+id/button2"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_people_events"
                android:gravity="bottom" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal"
                android:text="@string/human_activity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/people_events"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button3"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_general_vocabulary1"
                android:gravity="bottom" />

            <Button
                android:id="@+id/button4"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_nature"
                android:gravity="bottom" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal"
                android:text="@string/general_vocabulary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nature"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button5"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_human_environment"
                android:gravity="bottom"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_regional_geography"
                android:gravity="bottom" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal"
                android:text="@string/human_environment"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/regional_geography"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button7"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_person1"
                android:gravity="bottom" />

            <Button
                android:id="@+id/button8"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/ic_personal_dictionary"
                android:gravity="bottom" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal"
                android:text="@string/person"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/personal_dictionary"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>